@@ -21,6 +21,8 @@ TODO: perl-shell-window? perl-unix-socket?
 TODO: command line editing when icanon?
 
 TODO: resources section in manual talks bullshit about system-wide app-defaults file
+	- work around as memory corruption bug in xorg's XrmSetDatabase (apparently
+          broken since http://lists.freedesktop.org/archives/xorg-commit-diffs/2004-March/000239.html).
         - gdk-pixbuf is autodetected by default and preferred over libafterimage.
         - do not prepend a newline to the selection text when the starting line
           of the selection is not highlighted (Emanuele Giaquinta).
